--- a/inst/rmd/app_results_explorer_cindex.Rmd
+++ b/inst/rmd/app_results_explorer_cindex.Rmd
@@ -8,14 +8,15 @@ selectInput("cindex_group",label="Group",
             selected=c("adduct","tag"))
 ```
             
-<div class="flex-cols"> <!-- select-grouping-labels -->
+<div class="flex-cols">
+<!-- select-grouping-labels -->
 ```{r, echo=F}
 selectInput("sort1",label="Sort by ", choices=shinyscreen:::ARRANGE_CHOICES,width="15%",selected="quality")
 selectInput("sort2",label="then by ", choices=shinyscreen:::ARRANGE_CHOICES,width="15%",selected="mz")
 selectInput("sort3",label="then", choices=shinyscreen:::ARRANGE_CHOICES,width="15%")
 selectInput("sort4",label="and finally by", choices=shinyscreen:::ARRANGE_CHOICES,width="15%")
 ```
-</div> <!-- select-grouping-labels --
+</div> <!-- select-grouping-labels -->
 
 ```{r, echo=F}
 DT::DTOutput("cindex")
