app, api, state et al: Top-level functionality for metfrag.

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -469,6 +469,8 @@ contains six lines (for each existing combination of tag and adduct).
 ```{r, child='app_measure_props.Rmd'}
 ```
 
+```{r, child='app_results_explorer_metfrag.Rmd'}
+```
 
 <!-- ENGINE -->
 
