--- a/inst/rmd/app_project.Rmd
+++ b/inst/rmd/app_project.Rmd
@@ -254,6 +254,30 @@ actionButton("rem_dfiles_b",label="Remove selected entries")
 ```
 </div> <!-- datafiles/tags -->
 <div>
+<!-- tag/adduct/set associations -->
+<details><summary>Associate tags with adducts and sets.</summary> 
+
+Select file/tag entries you want to associate tags with and then
+select those you want from the select control.
+
+Repeat the same for sets.
+
+</details>
+```{r, echo=F}
+selectInput(inputId="tag_adducts_list",
+            label="Select adducts",
+            choices=shinyscreen:::DISP_ADDUCTS,
+            multiple=T,
+            selected=NA_character_)
+```
+```{r, echo=F}
+selectInput(inputId="tag_set_list",
+            label="Select set",
+            choices=NULL)
+```
+<!-- tag/adduct/set associations -->
+</div>
+<div>
 <!-- datafiles/adducts/tags -->
 <details>
 
