--- a/inst/rmd/app_project.Rmd
+++ b/inst/rmd/app_project.Rmd
@@ -264,16 +264,18 @@ Repeat the same for sets.
 
 </details>
 ```{r, echo=F}
+selectInput(inputId="tag_sets_list",
+            label="Select set",
+            ## multiple=T, #TODO
+            choices=NULL,
+            selected=NULL)
+```
+```{r, echo=F}
 selectInput(inputId="tag_adducts_list",
             label="Select adducts",
             choices=shinyscreen:::DISP_ADDUCTS,
             multiple=T,
-            selected=NA_character_)
-```
-```{r, echo=F}
-selectInput(inputId="tag_set_list",
-            label="Select set",
-            choices=NULL)
+            selected=NULL)
 ```
 <!-- tag/adduct/set associations -->
 </div>
