app_project, app_compound_lists_and_sets: Remove setid refs.

--- a/inst/rmd/app_compound_lists_and_sets.Rmd
+++ b/inst/rmd/app_compound_lists_and_sets.Rmd
@@ -1,12 +1,7 @@
-## View compound Lists and Sets
+## View compound Lists
 
 ### Compound List
 
 ```{r, echo=F}
 DT::dataTableOutput("comp_table")
-```
-
-### Setid Table
-```{r, echo=F}
-DT::dataTableOutput("setid_table")
 ```
