Close many stale FIXMEs.
get_summ_subset: Close stale FIXME issues after so many changes.

app_config_and_status: Scale down from TODO/FIXME to TODO.

mk_comp_tab: Remove worked around FIXME.

make_eic_ms1_plot: Removed FIXME related to ms1_rt. This needs a proper rework, but does not have much impact at the moment.

rf_get_cindex: Removed FIXME which seems to not trigger any weird behaviour yet.

output$comp_table: Scale down from TODO/FIXME to TODO for plotting the compound list.

... and others ...

--- a/inst/rmd/app_config_and_status.Rmd
+++ b/inst/rmd/app_config_and_status.Rmd
@@ -194,7 +194,7 @@ overload of the system's resources.
 ```{r, echo=F}
 ## This is treated differently than other MF inputs, because the value
 ## is not known prior to starting a R session. There should be a
-## mechanism for this. TODO FIXME.
+## mechanism for this. TODO
 
 numericInput(inputId="mf_proc",
              label="Number of MetFrag processes",
